fix(MessageList): fix scrollbar lag

--- a/src/components/MessageList/MessageList.css
+++ b/src/components/MessageList/MessageList.css
@@ -13,9 +13,5 @@
 }
 
 .list {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  justify-content: flex-end;
-  @apply --flex-fix;
+  display: block;
 }
